# Nuclear_stuff

./: CF252model.py  Exploration_csv_with_calculation.ipynb  Feynman_histogram.py  MCNP_code_creation.ipynb  MCNP_script.py  Pu239Pu240model.py  README.md  calculation_plutoniom.py  calculation_plutonium.py  combined_particle_times.csv  data_exploration.ipynb  dataset_exploration.ipynb  dataset_fuel_analysis.ipynb  dataset_fuel_creation.ipynb  density_recalculation.py  distribution.py  experiments1.py  exploration_cluster_dataset.ipynb  exploration_cpp_datasets.ipynb  histogram.py  model.py  track.py
.ipynb_checkpoints/: Feynman_histogram-checkpoint.py
CF_252 image/.ipynb_checkpoints/: histogram-checkpoint.py
Cpp_experiment/.ipynb_checkpoints/: CMakeLists-checkpoint.txt
Cpp_experiment/CF_250_source/: CMakeList.txt  cf250_source.cpp  cf250source.py  cf250sourceair.py  cf252_source.cpp  config.json  jobs.sh  model.xml  particle_times_output.csv
Cpp_experiment/CF_252_source/: cf252source.py  cf252sourceair.py  config.json  jobs.sh  model.xml  (+2 more)
Cpp_experiment/Pu242_source/: CMakeLists.txt  config.json  jobs.sh  model.xml  particle_times_output.csv  pu242_source.cpp  pu242source.py  pu242sourceair.py
Cpp_experiment/Pu242_source/.ipynb_checkpoints/: particle_times_output-checkpoint.csv
Cpp_experiment/Pu242_source/logs/: 24009887.err
EncoderDecoderStrat/: exploration.ipynb
Plutonium_results/: calculation_plutonium.py  distribution.py
Track/: track.py
Uppsala_dataset/: dataset_creation.ipynb  exploration.ipynb  exploration_top10.ipynb  main.py  test.py  train.py
(+144 files in other folders)
